fix padding bottom on mobile forms

--- a/static/css/nomad.less
+++ b/static/css/nomad.less
@@ -83,7 +83,7 @@ html, body {
     right:0;
     width:90%;
     margin:0 auto 0 auto;
-    padding-bottom:20px;
+    padding-bottom:60px;
     background-color:@backgroundColor;
 
     overflow-y: auto;
